# multi_project_project

./: .gitignore  .gitmodules  README.md  build.bat  run_tests.bat
build_ninja/: .ninja_deps  .ninja_log  build.ninja
build_ninja/obuchaika/: build.bat
projects/: CMakeLists.txt
projects/long_number/: CMakeLists.txt  long_number.cpp  long_number.hpp
projects/long_number/src/: long_number.cpp  long_number.hpp  tempCodeRunnerFile.cpp
projects/long_number/tests/: CMakeLists.txt  test_longnumber.cpp
projects/obuchaika/: CMakeLists.txt  build_obuchaika.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/shellsort/: CMakeLists.txt  main.cpp
projects/shellsort/src/: CMakeLists.txt  build_sort.bat  output.cpp  output.hpp  sort.cpp  sort.hpp
projects/test_example/: CMakeLists.txt
projects/test_example/test/: CMakeLists.txt  test_main.cpp
projects/vector_list/: CMakeLists.txt
projects/vector_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
projects/vector_list/test/: CMakeLists.txt  templates_doubly_linked_list.cpp  templates_vector.cpp  test_doubly_linked_list.cpp  test_vector.cpp
